--- a/MaihimeFXEnjuRW/src/main/resources/net/konohana/sakuya/maihime/enjurw/ticket01/ticket-01.fxml
+++ b/MaihimeFXEnjuRW/src/main/resources/net/konohana/sakuya/maihime/enjurw/ticket01/ticket-01.fxml
@@ -325,14 +325,14 @@
                               <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="123.0" text="玿谷" textAlignment="CENTER" GridPane.columnIndex="3" GridPane.rowIndex="4" />
                               <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="110.0" text="珮谷" GridPane.columnIndex="4" GridPane.rowIndex="4" />
                               <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="110.0" text="荍谷" GridPane.columnIndex="5" GridPane.rowIndex="4" />
-                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="115.0" textAlignment="CENTER" GridPane.rowIndex="5" />
-                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="118.0" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="124.0" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="5" />
-                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="122.0" textAlignment="CENTER" GridPane.columnIndex="3" GridPane.rowIndex="5" />
-                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="113.0" textAlignment="CENTER" GridPane.columnIndex="4" GridPane.rowIndex="5" />
-                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="115.0" GridPane.columnIndex="5" GridPane.rowIndex="5" />
-                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="117.0" GridPane.rowIndex="6" />
-                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="111.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="115.0" text="東苆谷" textAlignment="CENTER" GridPane.rowIndex="5" />
+                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="118.0" text="上茄谷" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="124.0" text="鵩山" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="122.0" text="上鵩山" textAlignment="CENTER" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="113.0" text="蛞川" textAlignment="CENTER" GridPane.columnIndex="4" GridPane.rowIndex="5" />
+                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="115.0" text="上筮谷" GridPane.columnIndex="5" GridPane.rowIndex="5" />
+                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="117.0" text="諾川" GridPane.rowIndex="6" />
+                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="111.0" text="本筥谷" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                               <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="116.0" GridPane.columnIndex="2" GridPane.rowIndex="6" />
                               <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="113.0" GridPane.columnIndex="3" GridPane.rowIndex="6" />
                               <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="117.0" GridPane.columnIndex="4" GridPane.rowIndex="6" />
