--- a/MaihimeFXEnjuRW/src/main/resources/net/konohana/sakuya/maihime/enjurw/ticket01/ticket-01.fxml
+++ b/MaihimeFXEnjuRW/src/main/resources/net/konohana/sakuya/maihime/enjurw/ticket01/ticket-01.fxml
@@ -387,8 +387,8 @@
                               <RowConstraints maxHeight="620.0" minHeight="10.0" prefHeight="60.0" vgrow="SOMETIMES" />
                            </rowConstraints>
                            <children>
-                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="111.0" text="苆谷" />
-                              <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="119.0" text="東苆谷" GridPane.columnIndex="1" />
+                              <Button mnemonicParsing="false" onAction="#onToStaBtn01Click" prefHeight="77.0" prefWidth="111.0" text="苆谷" />
+                              <Button mnemonicParsing="false" onAction="#onToStaBtn02Click" prefHeight="77.0" prefWidth="119.0" text="東苆谷" GridPane.columnIndex="1" />
                               <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="135.0" text="茄谷" GridPane.columnIndex="2" />
                               <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="119.0" text="上茄谷" GridPane.columnIndex="3" />
                               <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="106.0" text="笥谷" GridPane.columnIndex="4" />
