--- a/MaihimeFXEnjuRW/src/main/resources/net/konohana/sakuya/maihime/enjurw/inquiry/fromsta-inquiry.fxml
+++ b/MaihimeFXEnjuRW/src/main/resources/net/konohana/sakuya/maihime/enjurw/inquiry/fromsta-inquiry.fxml
@@ -71,42 +71,42 @@
                         <Font size="18.0" />
                     </font>
                 </Button>
-                <Button mnemonicParsing="false" prefHeight="226.0" prefWidth="306.0" text="箬谷線" GridPane.rowIndex="2">
+                <Button fx:id="btn09" mnemonicParsing="false" onAction="#onBtn09Click" prefHeight="226.0" prefWidth="306.0" text="箬谷線" GridPane.rowIndex="2">
                     <font>
                         <Font size="18.0" />
                     </font>
                 </Button>
-                <Button mnemonicParsing="false" prefHeight="264.0" prefWidth="320.0" text="苕谷線" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                <Button fx:id="btn10" mnemonicParsing="false" onAction="#onBtn10Click" prefHeight="264.0" prefWidth="320.0" text="苕谷線" GridPane.columnIndex="1" GridPane.rowIndex="2">
                     <font>
                         <Font size="18.0" />
                     </font>
                 </Button>
-                <Button mnemonicParsing="false" prefHeight="229.0" prefWidth="315.0" text="扆谷線" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                <Button fx:id="btn11" mnemonicParsing="false" onAction="#onBtn11Click" prefHeight="229.0" prefWidth="315.0" text="扆谷線" GridPane.columnIndex="2" GridPane.rowIndex="2">
                     <font>
                         <Font size="18.0" />
                     </font>
                 </Button>
-                <Button mnemonicParsing="false" prefHeight="247.0" prefWidth="331.0" text="珩谷線" GridPane.columnIndex="3" GridPane.rowIndex="2">
+                <Button fx:id="btn12" mnemonicParsing="false" onAction="#onBtn12Click" prefHeight="247.0" prefWidth="331.0" text="珩谷線" GridPane.columnIndex="3" GridPane.rowIndex="2">
                     <font>
                         <Font size="18.0" />
                     </font>
                 </Button>
-                <Button mnemonicParsing="false" prefHeight="221.0" prefWidth="324.0" text="玿谷線" GridPane.rowIndex="3">
+                <Button fx:id="btn13" mnemonicParsing="false" prefHeight="221.0" prefWidth="324.0" text="玿谷線" GridPane.rowIndex="3">
                     <font>
                         <Font size="18.0" />
                     </font>
                 </Button>
-                <Button mnemonicParsing="false" prefHeight="292.0" prefWidth="424.0" text="珮谷線" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                <Button fx:id="btn14" mnemonicParsing="false" prefHeight="292.0" prefWidth="424.0" text="珮谷線" GridPane.columnIndex="1" GridPane.rowIndex="3">
                     <font>
                         <Font size="18.0" />
                     </font>
                 </Button>
-                <Button mnemonicParsing="false" prefHeight="189.0" prefWidth="302.0" text="荍谷線" GridPane.columnIndex="2" GridPane.rowIndex="3">
+                <Button fx:id="btn15" mnemonicParsing="false" prefHeight="189.0" prefWidth="302.0" text="荍谷線" GridPane.columnIndex="2" GridPane.rowIndex="3">
                     <font>
                         <Font size="18.0" />
                     </font>
                 </Button>
-                <Button mnemonicParsing="false" prefHeight="217.0" prefWidth="316.0" text="槐谷線" GridPane.columnIndex="3" GridPane.rowIndex="3">
+                <Button fx:id="btn16" mnemonicParsing="false" prefHeight="217.0" prefWidth="316.0" text="槐谷線" GridPane.columnIndex="3" GridPane.rowIndex="3">
                     <font>
                         <Font size="18.0" />
                     </font>
